Acid Base Solutions: Added color coding for certain events on the line chart
Translated line chart to the right to accommodate long filenames for Acid Base Solutions
RPAL: added outputs for games
# 00.00.37 (63920) May 3, 2012
# 00.00.36 (63919) May 3, 2012
RPAL: Added support for in-progress games
RPAL: Added outputs
RPAL: started RPALAnalysisSummary
RPAL: cut over to new directory structure
# 00.00.35 (63581) Apr 18, 2012
Show summary text
Show timelines for each session
Added report for how many groups completed each level
# 00.00.34 (62725) Mar 21, 2012
# 00.00.33 (62674) Mar 20, 2012
Added a list view for which plots to view
Added rough draft of charts for rpal 2012
# 00.00.32 (62636) Mar 19, 2012
Count spinner clicks in each game
Fixed: Checks and points are broken, always empty in done game summaries
Fixed: Game in progress false after closing the application
# 00.00.31 (62566) Mar 15, 2012
Fixed: Time for each game is incorrect
Added a "export to console" button
Added a flag for game in progress
Show different tabs on different vertical levels
# 00.00.30 (62552) Mar 13, 2012
# 00.00.29 (62536) Mar 13, 2012
# 00.00.28 (62460) Mar 12, 2012
Fixed: Default molecule for tab 2 should be BF3 not CO2
# 00.00.27 (61391) Feb 15, 2012
Added realtime analysis for molecule-shapes
Added scripts for molecule shapes
Fixed monitor to use new authentication, see #3231
Fixed monitor to use new database layout, see #3230
# 00.00.26 (60719) Jan 27, 2012
Don't show histograms for each user
Join the log files split across an exit + start
# 00.00.25 (60704) Jan 26, 2012
Changed group analysis tool file chooser to select one folder only
Make another histogram that uses the first click as time-zero instead of when the sim is open
For the time chart, add time on views: molecules & bar graph
Plot the histogram of average number of clicks for each condition
For the time chart, added time spent on each solution
For the time chart, plot both time sim open and first click to last click